[package]
name = "ocaml-rs-bench"
version = "0.0.1"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "OCaml-rs benchmarks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
ocaml = { git = "https://github.com/zshipko/ocaml-rs.git", rev = "bc6917804866126fdf7deb4cb08f808da36a9e55" }
